package(default_visibility = ["//visibility:public"])

cc_test(
    name = "parse_test",
    srcs = ["parse_test.cc"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@gtest",
        ":parse",
    ],
)

cc_library(
    name = "parse",
    srcs = [
        "parse.cc",
        "parse.hh",
    ],
)

filegroup(
    name = "basic_shader",
    srcs = ["basic.glsl"],
)
