cc_library(
    name = "game_of_life_class",
    srcs = [
        "game_of_life.cc",
        "game_of_life.hh",
    ],
    deps = [
        "@raylib",
    ],
)

cc_binary(
    name = "game_of_life",
    srcs = [
        "main.cc",
    ],
    deps = [
        "@raylib",
        ":game_of_life_class",
    ],
    linkopts = ["/subsystem:windows", "/ENTRY:mainCRTStartup"],
)
