cc_binary(
    name = "glfw",
    srcs = ["main.cc"],
    deps = [
        "@glfw",
        "@glew",
        "//common/gl:index_buffer",
        "//common/gl:parse_shader",
        "//common/gl:renderer",
        "//common/gl:shader",
        "//common/gl:vertex_array",
        "//common/gl:vertex_buffer",
        "//common/gl:vertex_buffer_layout",
    ],
    data = [
        "//common/gl/shaders:basic_shader",
    ],
    linkopts = ["opengl32.lib"],
)
